Update title and headings in index.html

--- a/index.html
+++ b/index.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Script Store</title>
-  <link rel="stylesheet" href="style.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Neon Script Store</title>
+<link rel="stylesheet" href="style.css">
 </head>
-
 <body>
 
-  <h1 class="title">⚡ Script Store ⚡</h1>
+<h2 class="category-title">Script Gratisan</h2>
+<div id="freeList" class="container"></div>
 
-  <div id="list" class="container"></div>
+<h2 class="category-title">Script Premium</h2>
+<div id="premiumList" class="container"></div>
 
-  <script src="script.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
